#######################################################
#          Makefile for Linux Video Studio            #
#######################################################

SUBDIRS = yuv4mpeg src transitions docs pixmaps

EXTRA_DIST = README TODO  ChangeLog INSTALL \
	README.stv INSTALL.stv ChangeLog.stv \
	AUTHORS COPYING \
	linuxvideostudio.spec.in
